# voxlog

./: .env.example  .gitignore  LICENSE  README.md  build_app.sh  bundle_app.sh  cli.py  client.py  deploy.sh  export_cron.py  package-lock.json  package.json  pyproject.toml  run.sh  server_main.py  start.sh  terms.json  voxlog-server.spec
.github/workflows/: release-dmg.yml
app/frontend/: package-lock.json
apps/desktop/: server.py
apps/desktop-tauri/: README.md  package-lock.json  package.json
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/src/: bridge.rs  commands.rs  contracts.rs  lib.rs  main.rs  state.rs
apps/gateway/: __init__.py  server.py
core/: __init__.py  archive.py  asr_router.py  audio.py  config.py  dictionary.py  exporter.py  models.py  network_detect.py  obsidian_sync.py  polisher.py  stats.py  summarizer.py  whisper_local.py
crates/input-output/: Cargo.toml
crates/stt-whispercpp/: Cargo.toml
dictionaries/: base.json  personal.json  technical.json
integrations/: __init__.py  ai_mate_memory.py  obsidian.py
macos/VoxLog/: Package.swift
macos/VoxLogXcode/: AppIcon.icns  DictionaryEditor.swift  HotkeyManager.swift  Info.plist  MarkdownPreview.swift  Package.swift  ProcessManager.swift  SettingsEditor.swift  VoxLogApp.swift
memory/: __init__.py  sqlite_store.py
runtime/: __init__.py
scripts/: build_alpha.sh  dev_phase0.sh  doctor_alpha.sh  frozen_backend.py  frozen_gateway.py  install_alpha.sh  install_from_bundle.sh  smoke_phase0.sh  uninstall_alpha.sh  uninstall_installed.sh  verify_phase0.sh
server/: __init__.py  app.py
tests/: test_ai_mate_memory_integration.py  test_api.py  test_archive.py  test_asr_router.py  test_audio.py  test_dictionary.py  test_exporter.py  test_gateway_app.py  test_obsidian_integration.py  test_polisher.py  test_recent_utterance.py  test_runtime_contracts.py  test_session_digest.py  test_sqlite_store_phase0.py
(+63 files in other folders)
