[package]
name = "voxlog2-desktop-tauri"
version = "0.1.0"
edition = "2021"
description = "Phase 0 Tauri shell for VoxLog2 Desktop"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
urlencoding = "2"
keyring = "3"
voxlog-stt-whispercpp = { path = "../../../crates/stt-whispercpp" }
voxlog-input-output = { path = "../../../crates/input-output" }

[lib]
name = "voxlog2_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
